WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58726
ASSERT failure when svg <use> element changes href
https://bugs.webkit.org/show_bug.cgi?id=58726
Summary
ASSERT failure when svg <use> element changes href
Leo Yang
Reported
2011-04-16 01:27:39 PDT
ASSERT failure in SVGUseElement.cpp:509 when load the following document. <svg xmlns="
http://www.w3.org/2000/svg
" xmlns:xlink="
http://www.w3.org/1999/xlink
"> <g> <use id="use" xlink:href="#rect" /> </g> <defs> <rect id="rect" x="0" y="0" width="100" height="60" /> </defs> <script> if (window.layoutTestController) layoutTestController.waitUntilDone(); function runTest() { document.getElementById("use").setAttribute("xlink:href", ""); if (window.layoutTestController) layoutTestController.notifyDone(); } window.setTimeout("runTest()", 0); </script> </svg>
Attachments
Patch
(4.90 KB, patch)
2011-04-16 02:05 PDT
,
Leo Yang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Leo Yang
Comment 1
2011-04-16 02:05:16 PDT
Created
attachment 89921
[details]
Patch
Nikolas Zimmermann
Comment 2
2011-04-16 02:07:25 PDT
Comment on
attachment 89921
[details]
Patch Good catch!
WebKit Commit Bot
Comment 3
2011-04-16 02:11:18 PDT
Comment on
attachment 89921
[details]
Patch Rejecting
attachment 89921
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-7', 'apply-..." exit_code: 1 Last 500 characters of output: autoinstalled/mechanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 60] Operation timed out> Full output:
http://queues.webkit.org/results/8459397
Leo Yang
Comment 4
2011-04-16 03:29:00 PDT
Comment on
attachment 89921
[details]
Patch Let the cq try again
Eric Seidel (no email)
Comment 5
2011-04-16 09:14:30 PDT
Sorry about that. :(
WebKit Commit Bot
Comment 6
2011-04-16 11:35:24 PDT
The commit-queue encountered the following flaky tests while processing
attachment 89921
[details]
: http/tests/xmlhttprequest/basic-auth-nopassword.html
bug 53170
The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2011-04-16 11:38:04 PDT
Comment on
attachment 89921
[details]
Patch Clearing flags on attachment: 89921 Committed
r84090
: <
http://trac.webkit.org/changeset/84090
>
WebKit Commit Bot
Comment 8
2011-04-16 11:38:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug