2011-04-16  Leo Yang  <leoyang.webkit@gmail.com>

Reviewed by Nikolas Zimmermann.

        ASSERT failure when svg <use> element changes href
        https://bugs.webkit.org/show_bug.cgi?id=58726

        Test case to verify assertion at line 509 of SVGUseElement.cpp.
        Test passes if no crash occurs in debug mode.

        * svg/custom/use-crash-when-href-change-expected.txt: Added.
        * svg/custom/use-crash-when-href-change.svg: Added.
2011-04-16  Leo Yang  <leoyang.webkit@gmail.com>

        Reviewed by Nikolas Zimmermann.

        ASSERT failure when svg <use> element changes href
        https://bugs.webkit.org/show_bug.cgi?id=58726

        m_resourceId was not empty after the pending resource
        becomes available. This will trigger the assertion at
        line 509 of SVGUseElement.cpp when the <use> element's
        href becomes empty or invalid.

        This patch makes m_resourceId be empty after the pending
        resource becomes available to avoid assertion failure.

        Test: svg/custom/use-crash-when-href-change.svg

        * svg/SVGUseElement.cpp:
        (WebCore::SVGUseElement::buildPendingResource):

Canonical link: https://commits.webkit.org/73831@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84090 268f45cc-cd09-0410-ab3c-d52691b4dbfc